argocd-k8s-resources/longhorn/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
