argocd-k8s-resources/longhorn/overlays/prod/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-test
spec:
  containers:
  - name: volume-test
    image: wimvandenwyngaert/test:2.4
    command:
    - sh
    - -c
    - echo 'Welcome Wim' && sleep infinity
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: longhorn-volume
      mountPath: /data
  volumes:
  - name: longhorn-volume
    persistentVolumeClaim:
      claimName: longhorn-pvc
